--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -11,14 +11,22 @@ ext {
             projectName: 'RxJava-Coroutines',
             appId: 'com.github.xvar.rxvsc'
     ]
+    version = [
+            room: '2.2.6'
+    ]
     gradlePlugin = [
-            android: 'com.android.tools.build:gradle:4.2.0-beta03',
+            android: 'com.android.tools.build:gradle:7.0.0-alpha05',
             kotlin : "org.jetbrains.kotlin:kotlin-gradle-plugin:${config.kotlin}"
     ]
     library = [
             kotlin: "org.jetbrains.kotlin:kotlin-stdlib:${config.kotlin}",
             androidx: [
-                    core_ktx: 'androidx.core:core-ktx:1.3.1'
+                    core_ktx: 'androidx.core:core-ktx:1.3.1',
+                    room: [
+                            runtime: "androidx.room:room-runtime:${version.room}",
+                            compiler: "androidx.room:room-compiler:${version.room}",
+                            test: "androidx.room:room-testing:${version.room}"
+                    ],
             ],
             google: [
                     material: 'com.google.android.material:material:1.2.1'
