--- a/source/app/build.gradle
+++ b/source/app/build.gradle
@@ -4,10 +4,13 @@ plugins {
 }
 
 android {
+    defaultConfig {
+        applicationId config.appId
+    }
+
     buildTypes {
         release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            shrinkResources true
         }
     }
 }
