--- a/source/app/src/main/AndroidManifest.xml
+++ b/source/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.github.xvar.example">
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:name=".App"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/applicationLabel"
