--- a/source/data/repository-impl/build.gradle
+++ b/source/data/repository-impl/build.gradle
@@ -5,7 +5,7 @@ plugins {
 }
 
 dependencies {
-    implementation project(':source:data:model')
+    implementation project(':source:domain:model')
     implementation library.androidx.room.runtime
     kapt library.androidx.room.compiler
 }
