--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,6 @@
 apply from: 'dependencies.gradle'
 rootProject.name = config.projectName
 include ':source:app'
-include ':source:data:model'
-include ':source:data:repository-api'
 include ':source:data:repository-impl'
+include ':source:domain:model'
+include ':source:domain:repository-api'
