--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -12,10 +12,10 @@ ext {
             appId: 'com.github.xvar.rxvsc'
     ]
     version = [
-            room: '2.2.6'
+            room: '2.3.0-beta02'
     ]
     gradlePlugin = [
-            android: 'com.android.tools.build:gradle:7.0.0-alpha09',
+            android: 'com.android.tools.build:gradle:7.0.0-alpha10',
             kotlin : "org.jetbrains.kotlin:kotlin-gradle-plugin:${config.kotlin}"
     ]
     library = [
@@ -25,11 +25,26 @@ ext {
                     room: [
                             runtime: "androidx.room:room-runtime:${version.room}",
                             compiler: "androidx.room:room-compiler:${version.room}",
-                            test: "androidx.room:room-testing:${version.room}"
+                            test: "androidx.room:room-testing:${version.room}",
+                            rxjava3: "androidx.room:room-rxjava3:${version.room}",
                     ],
             ],
             google: [
-                    material: 'com.google.android.material:material:1.2.1'
-            ]
+                    material: 'com.google.android.material:material:1.3.0'
+            ],
+            test: [
+                junit:  "junit:junit:4.13.2",
+                androidx: [
+                        junit: "androidx.test.ext:junit:1.1.2",
+                        runner: "androidx.test:runner:1.3.0",
+                        espresso: "androidx.test.espresso:espresso-core:3.3.0",
+                        core_test: "androidx.arch.core:core-testing:2.1.0"
+                ],
+            ],
+
+            rxjava: [
+                    rxjava3   : "io.reactivex.rxjava3:rxjava:3.0.0",
+                    rxandroid : 'io.reactivex.rxjava3:rxandroid:3.0.0'
+            ],
     ]
 }
