compose plugged in

--- a/build.gradle
+++ b/build.gradle
@@ -71,15 +71,7 @@ subprojects {
 
                 kotlinOptions {
                     jvmTarget = config.jvmTarget
-                }
-
-                buildFeatures {
-                    // Enables Jetpack Compose for this module
-                    compose true
-                }
-
-                composeOptions {
-                    kotlinCompilerExtensionVersion config.compose
+                    useIR = true
                 }
             }
         }
