--- a/source/app/build.gradle
+++ b/source/app/build.gradle
@@ -17,5 +17,5 @@ android {
 
 dependencies {
     implementation library.kotlin
-    implementation library.google.material
+    implementation project(":source:feature:measure:presentation")
 }
