--- a/source/feature/measure/presentation/build.gradle
+++ b/source/feature/measure/presentation/build.gradle
@@ -3,6 +3,23 @@ plugins {
     id 'kotlin-android'
 }
 
-dependencies {
+android {
+    buildFeatures {
+        compose true
+    }
 
+    composeOptions {
+        kotlinCompilerExtensionVersion config.compose
+    }
+}
+
+dependencies {
+    implementation library.kotlin
+    implementation library.androidx.compose.tooling
+    //implementation library.androidx.compose.ui
+    //implementation library.androidx.compose.compiler
+    //implementation library.androidx.compose.foundation
+    implementation library.androidx.compose.activity
+    implementation library.androidx.compose.material
+    implementation library.google.material
 }
