--- a/source/feature/measure/presentation/src/main/AndroidManifest.xml
+++ b/source/feature/measure/presentation/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application>
         <activity
-            android:name=".activity.MainActivity"
+            android:name=".ui.activity.MainActivity"
             android:exported="true"
             android:label="@string/title_activity_main"
             >
